--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,12 +6,19 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+ display: flex;
+ /* box-sizing: border-box; */
+
+
 }
 
-.header {
+header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  width: 100%;
+  padding: 23px 20px;
 }
 
 .profile-image {
@@ -20,6 +27,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  display: flex;
+  align-self: center;
 }
 
 .logo {
@@ -35,6 +44,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 12px;
 }
 
 a {
@@ -45,4 +55,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  margin: 16px;
 }
+
+container {
+  /* display: flex; */
+  display: flex;
+  gap: 8px;
+  justify-content: end;
+  margin-left:auto ;
+}
+
