--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,19 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  align-items: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+ 
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -24,3 +28,16 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+container {
+  display: flex;
+  justify-content: space-around;
+  gap: 32px;
+  
+}
+ ul {
+  max-width: 200px;
+ }
+  .text{
+    flex-wrap: wrap;
+  }
