--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
 body {
+  display: flex;
+  flex-direction: column;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -16,6 +19,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -24,4 +28,44 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+ ul {
+  list-style-type: none;
+  padding: 0;
+ }
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 10px ;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 16px;
+  background-color: #eeeeee;
+}
+
+.right-links {
+  display: flex;
+  gap: 10px;
+}
+
+.left-links {
+  display: flex;
+  gap: 10px;
+}
+
+a {
+  color: #666;
+  text-decoration: none;
 }
