--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,72 @@
 body {
+  display: flex;
+  flex-direction: column ;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
 .header {
+  display: flex;
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
 }
 
 .sidebar {
+  display: flex;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  /* max-width: 100vh; */
+  flex-shrink: 0;
+  /* height: 100vh; */
+  /* padding: 16px; */
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  height: 250px;
+  width: 300px ;
+  /* margin: 16px;
+  padding: 10px; */
+}
+
+a {
+  font-size: 24px;
+  color: #eee;
+  text-decoration: none;
+}
+
+ul  {
+  list-style-type: none;
+  padding-left: 10px;
+}
+
+container {
+  display: flex;
+  min-height: calc(100vh - 144px);
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+  gap: 16px;
 }
